Trainig file edited

--- a/NeRF_Training_Colab.ipynb
+++ b/NeRF_Training_Colab.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NeRF Training on Google Colab (GitHub Version)\n",
+    "# NeRF Training on Google Colab\n",
     "\n",
-    "This notebook trains NeRF on the LEGO dataset using files from GitHub.\n",
+    "**GitHub Repo**: https://github.com/mabuhann/nerf-pytorch\n",
     "\n",
-    "**Expected Runtime**: 4-6 hours on Colab GPU (T4)\n",
+    "**Dataset**: Google Drive\n",
     "\n",
-    "**GitHub Repo**: https://github.com/mabuhann/nerf-pytorch"
+    "**Expected Runtime**: 4-6 hours on T4 GPU"
    ]
   },
   {
@@ -26,23 +26,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check GPU availability\n",
     "!nvidia-smi\n",
     "\n",
     "import torch\n",
-    "print(f\"\\nPyTorch version: {torch.__version__}\")\n",
-    "print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
+    "print(f\"\\nCUDA available: {torch.cuda.is_available()}\")\n",
     "if torch.cuda.is_available():\n",
-    "    print(f\"CUDA version: {torch.version.cuda}\")\n",
-    "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
-    "    print(f\"GPU Memory: {torch.cuda.get_device_properties(0).total_memory / 1024**3:.2f} GB\")"
+    "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Clone GitHub Repository"
+    "## Step 2: Clone GitHub Repo"
    ]
   },
   {
@@ -51,17 +47,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone the GitHub repository\n",
     "!git clone https://github.com/mabuhann/nerf-pytorch.git\n",
+    "%cd nerf-pytorch\n",
     "\n",
-    "print(\"\\n✓ Repository cloned\")"
+    "print(\"\\n✓ Repo cloned\")\n",
+    "!ls -lh"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Navigate to Repository"
+    "## Step 3: Mount Google Drive and Copy Dataset"
    ]
   },
   {
@@ -70,14 +67,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "print(\"\\n✓ Drive mounted\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy dataset from your Google Drive\n",
+    "# Adjust the path if your folder structure is different\n",
+    "\n",
     "import os\n",
     "\n",
-    "# Change to repository directory\n",
-    "os.chdir('/content/nerf-pytorch')\n",
+    "# Create data directory\n",
+    "!mkdir -p data/nerf_synthetic\n",
     "\n",
-    "print(f\"Current directory: {os.getcwd()}\")\n",
-    "print(\"\\nFiles in directory:\")\n",
-    "!ls -lh"
+    "# Copy the lego dataset from Drive\n",
+    "# This assumes you have a 'lego' folder in the Drive link you shared\n",
+    "!cp -r /content/drive/MyDrive/lego data/nerf_synthetic/\n",
+    "\n",
+    "# If your Drive structure is different, it might be:\n",
+    "# !cp -r \"/content/drive/MyDrive/Your Folder Name/lego\" data/nerf_synthetic/\n",
+    "\n",
+    "print(\"\\n✓ Dataset copied\")\n",
+    "\n",
+    "# Verify dataset\n",
+    "print(\"\\nChecking dataset files:\")\n",
+    "!ls data/nerf_synthetic/lego/"
    ]
   },
   {
@@ -93,8 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install required packages\n",
-    "!pip install imageio imageio-ffmpeg configargparse scikit-image tqdm matplotlib -q\n",
+    "!pip install imageio imageio-ffmpeg configargparse scikit-image -q\n",
     "\n",
     "print(\"✓ Dependencies installed\")"
    ]
@@ -103,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Verify Dataset and Files"
+    "## Step 5: Verify Files"
    ]
   },
   {
@@ -114,56 +134,37 @@
    "source": [
     "import json\n",
     "\n",
-    "print(\"Checking required files...\\n\")\n",
+    "print(\"Checking files...\\n\")\n",
     "\n",
     "# Check Python files\n",
-    "required_files = [\n",
-    "    'run_nerf_with_metrics.py',\n",
-    "    'run_nerf_helpers.py',\n",
-    "    'load_blender.py'\n",
-    "]\n",
-    "\n",
-    "for f in required_files:\n",
-    "    if os.path.exists(f):\n",
-    "        print(f\"✓ {f}\")\n",
-    "    else:\n",
-    "        print(f\"✗ {f} NOT FOUND\")\n",
+    "required = ['run_nerf_with_metrics.py', 'run_nerf_helpers.py', 'load_blender.py']\n",
+    "for f in required:\n",
+    "    print(f\"{'✓' if os.path.exists(f) else '✗'} {f}\")\n",
     "\n",
     "# Check config\n",
-    "if os.path.exists('configs/lego_config.txt'):\n",
-    "    print(f\"✓ configs/lego_config.txt\")\n",
-    "elif os.path.exists('lego_config.txt'):\n",
-    "    print(f\"✓ lego_config.txt (will move to configs/)\")\n",
-    "    !mkdir -p configs\n",
-    "    !mv lego_config.txt configs/\n",
-    "else:\n",
-    "    print(f\"✗ lego_config.txt NOT FOUND\")\n",
+    "print(f\"\\n{'✓' if os.path.exists('configs/lego_config.txt') else '✗'} configs/lego_config.txt\")\n",
     "\n",
-    "# Check dataset\n",
-    "print(\"\\nChecking dataset...\\n\")\n",
-    "base_path = 'data/nerf_synthetic/lego'\n",
-    "\n",
-    "if os.path.exists(base_path):\n",
-    "    for split in ['train', 'val', 'test']:\n",
-    "        transform_file = f'{base_path}/transforms_{split}.json'\n",
-    "        if os.path.exists(transform_file):\n",
-    "            with open(transform_file, 'r') as f:\n",
-    "                data = json.load(f)\n",
-    "            n_frames = len(data['frames'])\n",
-    "            print(f\"✓ {split}: {n_frames} images\")\n",
-    "        else:\n",
-    "            print(f\"✗ {transform_file} not found\")\n",
-    "else:\n",
-    "    print(f\"✗ Dataset not found at {base_path}\")\n",
-    "    print(\"\\nLooking for dataset in other locations...\")\n",
-    "    !find . -name \"transforms_train.json\" -type f"
+    "# Check dataset transforms\n",
+    "print(\"\\nDataset:\")\n",
+    "for split in ['train', 'val', 'test']:\n",
+    "    path = f'data/nerf_synthetic/lego/transforms_{split}.json'\n",
+    "    if os.path.exists(path):\n",
+    "        with open(path) as f:\n",
+    "            data = json.load(f)\n",
+    "        print(f\"✓ {split}: {len(data['frames'])} images\")\n",
+    "    else:\n",
+    "        print(f\"✗ {split}: not found\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6: Preview Configuration"
+    "## Step 6: Start Training\n",
+    "\n",
+    "**This will take 4-6 hours**\n",
+    "\n",
+    "Keep the browser tab open or use Colab Pro to avoid timeouts."
    ]
   },
   {
@@ -172,71 +173,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show the configuration\n",
-    "print(\"Configuration for training:\\n\")\n",
-    "if os.path.exists('configs/lego_config.txt'):\n",
-    "    !cat configs/lego_config.txt\n",
-    "else:\n",
-    "    print(\"Config file not found. Creating default config...\")\n",
-    "    !mkdir -p configs\n",
-    "    \n",
-    "    config = \"\"\"expname = lego_metrics\n",
-    "basedir = ./logs\n",
-    "datadir = ./data/nerf_synthetic/lego\n",
-    "dataset_type = blender\n",
-    "\n",
-    "no_batching = True\n",
-    "\n",
-    "use_viewdirs = True\n",
-    "white_bkgd = True\n",
-    "lrate_decay = 500\n",
-    "\n",
-    "N_samples = 64\n",
-    "N_importance = 128\n",
-    "N_rand = 1024\n",
-    "chunk = 8192\n",
-    "netchunk = 131072\n",
-    "\n",
-    "half_res = False\n",
-    "\n",
-    "i_print = 100\n",
-    "i_weights = 10000\n",
-    "i_testset = 25000\n",
-    "i_video = 50000\n",
-    "\"\"\"\n",
-    "    \n",
-    "    with open('configs/lego_config.txt', 'w') as f:\n",
-    "        f.write(config)\n",
-    "    \n",
-    "    print(\"✓ Created default config\")\n",
-    "    !cat configs/lego_config.txt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 7: Start Training\n",
-    "\n",
-    "**⚠️ IMPORTANT**: This will take 4-6 hours. Make sure:\n",
-    "1. You're using a GPU runtime (Runtime → Change runtime type → GPU)\n",
-    "2. Keep the tab open or use Colab Pro to avoid timeouts\n",
-    "\n",
-    "The training will:\n",
-    "- Run for 200,000 iterations\n",
-    "- Save checkpoints every 10,000 iterations\n",
-    "- Evaluate on test set every 25,000 iterations\n",
-    "- Print progress every 100 iterations\n",
-    "- Save all metrics automatically"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Start training\n",
     "!python run_nerf_with_metrics.py --config configs/lego_config.txt"
    ]
   },
@@ -244,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 8: View Results"
+    "## Step 7: View Results"
    ]
   },
   {
@@ -256,7 +192,7 @@
     "import json\n",
     "from IPython.display import Image, display\n",
     "\n",
-    "# Load and display summary metrics\n",
+    "# Show summary\n",
     "print(\"=\"*60)\n",
     "print(\"TRAINING SUMMARY\")\n",
     "print(\"=\"*60)\n",
@@ -270,19 +206,16 @@
     "\n",
     "print(\"=\"*60)\n",
     "\n",
-    "# Display plots\n",
-    "print(\"\\nTraining Metrics Plot:\")\n",
-    "if os.path.exists('logs/lego_metrics/training_metrics.png'):\n",
-    "    display(Image('logs/lego_metrics/training_metrics.png'))\n",
-    "else:\n",
-    "    print(\"Plot not found\")"
+    "# Show plot\n",
+    "print(\"\\nTraining Plot:\")\n",
+    "display(Image('logs/lego_metrics/training_metrics.png'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 9: Analyze Results (Optional)"
+    "## Step 8: Analyze Results (Optional)"
    ]
   },
   {
@@ -291,26 +224,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run detailed analysis if analyze_results.py exists\n",
-    "if os.path.exists('analyze_results.py'):\n",
-    "    !python analyze_results.py \\\n",
-    "        --log_dir logs/lego_metrics \\\n",
-    "        --save_plot logs/lego_metrics/detailed_analysis.png \\\n",
-    "        --export_table logs/lego_metrics/results_table.md\n",
-    "    \n",
-    "    # Display detailed analysis\n",
-    "    print(\"\\nDetailed Analysis:\")\n",
-    "    if os.path.exists('logs/lego_metrics/detailed_analysis.png'):\n",
-    "        display(Image('logs/lego_metrics/detailed_analysis.png'))\n",
-    "else:\n",
-    "    print(\"analyze_results.py not found, skipping detailed analysis\")"
+    "# Run detailed analysis\n",
+    "!python analyze_results.py \\\n",
+    "    --log_dir logs/lego_metrics \\\n",
+    "    --save_plot logs/lego_metrics/detailed_analysis.png\n",
+    "\n",
+    "# Show detailed plot\n",
+    "print(\"\\nDetailed Analysis:\")\n",
+    "display(Image('logs/lego_metrics/detailed_analysis.png'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 10: Download Results"
+    "## Step 9: Download Results"
    ]
   },
   {
@@ -321,25 +249,20 @@
    "source": [
     "from google.colab import files\n",
     "\n",
-    "# Zip all results\n",
-    "!cd logs && zip -r lego_metrics_results.zip lego_metrics/\n",
+    "# Zip results\n",
+    "!zip -r results.zip logs/lego_metrics/\n",
     "\n",
-    "print(\"✓ Results zipped\")\n",
-    "print(\"\\nDownloading results...\")\n",
+    "# Download\n",
+    "files.download('results.zip')\n",
     "\n",
-    "# Download the zip file\n",
-    "files.download('logs/lego_metrics_results.zip')\n",
-    "\n",
-    "print(\"\\n✓ Download started\")\n",
-    "print(\"\\nKey files in the zip:\")\n",
-    "!zipinfo -1 logs/lego_metrics_results.zip | head -20"
+    "print(\"\\n✓ Download started\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 11: Quick Metrics Summary"
+    "## Step 10: Key Metrics for Report"
    ]
   },
   {
@@ -348,50 +271,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Quick extraction of key metrics for your report\n",
-    "import json\n",
-    "\n",
+    "# Extract key metrics\n",
     "with open('logs/lego_metrics/summary_metrics.json', 'r') as f:\n",
     "    metrics = json.load(f)\n",
     "\n",
     "print(\"=\"*60)\n",
     "print(\"KEY METRICS FOR YOUR REPORT\")\n",
     "print(\"=\"*60)\n",
-    "print(f\"\\nTraining Time: {metrics.get('total_training_time_hours', 'N/A'):.2f} hours\" if metrics.get('total_training_time_hours') else \"Training Time: N/A\")\n",
-    "print(f\"Test PSNR: {metrics.get('best_test_psnr', 'N/A'):.2f} dB\" if metrics.get('best_test_psnr') else \"Test PSNR: N/A\")\n",
-    "print(f\"Test SSIM: {metrics.get('avg_test_ssim', 'N/A'):.4f}\" if metrics.get('avg_test_ssim') else \"Test SSIM: N/A\")\n",
-    "print(f\"Avg Step Time: {metrics.get('avg_step_time', 'N/A'):.4f} seconds\" if metrics.get('avg_step_time') else \"Avg Step Time: N/A\")\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"\\nCopy these values for comparison with 3DGS!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Troubleshooting\n",
-    "\n",
-    "### Out of Memory Error\n",
-    "If you get OOM errors, reduce batch sizes. Create a new cell and run:\n",
-    "```python\n",
-    "# Edit config to reduce memory usage\n",
-    "config = open('configs/lego_config.txt').read()\n",
-    "config = config.replace('N_rand = 1024', 'N_rand = 512')\n",
-    "config = config.replace('chunk = 8192', 'chunk = 4096')\n",
-    "with open('configs/lego_config.txt', 'w') as f:\n",
-    "    f.write(config)\n",
-    "print(\"✓ Config updated with lower memory settings\")\n",
-    "```\n",
-    "\n",
-    "### Session Timeout\n",
-    "- Use Colab Pro for longer sessions\n",
-    "- Keep browser tab active\n",
-    "- Consider reducing iterations for testing\n",
-    "\n",
-    "### Dataset Not Found\n",
-    "Make sure your GitHub repo has the data in the correct location:\n",
-    "- `data/nerf_synthetic/lego/transforms_train.json`\n",
-    "- `data/nerf_synthetic/lego/train/` folder with images"
+    "print(f\"Training Time: {metrics['total_training_time_hours']:.2f} hours\")\n",
+    "print(f\"Test PSNR: {metrics['best_test_psnr']:.2f} dB\")\n",
+    "print(f\"Test SSIM: {metrics['avg_test_ssim']:.4f}\")\n",
+    "print(f\"Avg Step Time: {metrics['avg_step_time']:.4f} sec\")\n",
+    "print(\"=\"*60)"
    ]
   }
  ],
@@ -404,9 +295,6 @@
   "kernelspec": {
    "display_name": "Python 3",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python"
   }
  },
  "nbformat": 4,
