Trainig file edited

--- a/NeRF_Training_Colab.ipynb
+++ b/NeRF_Training_Colab.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "# Copy the lego dataset from Drive\n",
     "# This assumes you have a 'lego' folder in the Drive link you shared\n",
-    "!cp -r /content/drive/MyDrive/lego data/nerf_synthetic/\n",
+    "!cp -r /content/drive/MyDrive/data/nerf_synthetic data/\n",
     "\n",
     "# If your Drive structure is different, it might be:\n",
     "# !cp -r \"/content/drive/MyDrive/Your Folder Name/lego\" data/nerf_synthetic/\n",
